# Skyrim_Copilot

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
backend/: __init__.py
backend/api/: __init__.py  dify_client.py  main.py  schemas.py  settings.py
backend/api/routes/: chat.py  files.py
backend/ingest/: __init__.py  mediawiki_client.py  uesp_parser.py  uesp_scraper.py  uesp_seed_catalog.py
backend/pipeline/: __init__.py  build_uesp_corpus.py  bundle_for_dify.py  prepare_dify_upload.py
backend/rag/: __init__.py  chunker.py  documents.py  markdown_exporter.py
data/processed/: url_plan.jsonl
data/processed/dify_bundles/: skyrim_bundle_01_of_43.md  skyrim_bundle_02_of_43.md  skyrim_bundle_03_of_43.md  skyrim_bundle_04_of_43.md  skyrim_bundle_05_of_43.md  skyrim_bundle_06_of_43.md  skyrim_bundle_07_of_43.md  skyrim_bundle_08_of_43.md  skyrim_bundle_09_of_43.md  skyrim_bundle_10_of_43.md  skyrim_bundle_11_of_43.md  skyrim_bundle_12_of_43.md  skyrim_bundle_13_of_43.md  skyrim_bundle_14_of_43.md  skyrim_bundle_15_of_43.md  skyrim_bundle_16_of_43.md  skyrim_bundle_17_of_43.md  skyrim_bundle_18_of_43.md  skyrim_bundle_19_of_43.md  skyrim_bundle_20_of_43.md  skyrim_bundle_21_of_43.md  skyrim_bundle_22_of_43.md  skyrim_bundle_23_of_43.md  skyrim_bundle_24_of_43.md  (+19 more)
front-end/: index.html  package.json  pnpm-lock.yaml
front-end/src/: App.tsx  index.css
tests/: test_dify_api.py  test_mediawiki_client.py  test_pipeline_plan.py  test_rag_export.py  test_uesp_parser.py  test_uesp_scraper.py
tests/fixtures/: uesp_sample.html
(+4213 files in other folders)
